--- a/#4/index.html
+++ b/#4/index.html
@@ -8,15 +8,15 @@
   <title>Document</title>
 </head>
 <body>
-  <form id = "login-form">
+  <form id  = "login-form">
     <input
       required
       maxlength="15"
       type="text"
-      placeholder="What is uyor name?" 
-     />
+      placeholder="What's your name?"
+    />
     <button>Log In</button>
   </form>
-  <script src="app.js"></script>
+ <script src="app.js"></script>
 </body>
 </html>
